--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,34 +6,47 @@
     android:id="@+id/id_swipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:id="@+id/activity_main"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.yasin.eledemo.MainActivity">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/id_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            app:srcCompat="@drawable/ic_remove_circle_outline" />
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/id_shopcart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            app:srcCompat="@drawable/ic_shopping_cart" />
-
+        android:orientation="vertical"
+        >
         <ImageView
-            android:id="@+id/id_image_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
+            android:id="@+id/id_head_view"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:src="@mipmap/icon_beaty"
+            android:layout_marginTop="-40dp"
+            android:scaleType="centerCrop"
+            />
+        <RelativeLayout
+            android:id="@+id/activity_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            tools:context="com.yasin.eledemo.MainActivity">
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/id_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                app:srcCompat="@drawable/ic_remove_circle_outline" />
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/id_shopcart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                app:srcCompat="@drawable/ic_shopping_cart" />
+
+            <ImageView
+                android:id="@+id/id_image_test"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </LinearLayout>
 </com.yasin.eledemo.swipe.SwipeRefreshLayout>
